# algo

./: .replit  main.py  pyproject.toml
indicators/: ema.py  rsi.py
src/: __init__.py
src/core/: __init__.py
src/data/: __init__.py
src/indicators/: __init__.py
src/strategy/: __init__.py
src/utils/: __init__.py
trading-bot/: main.py
trading-bot/data/: fetcher.py
trading-bot/indicators/: atr.py
trading-bot/risk/: risk-controler.py
trading-bot/strategy/: ATR-TP-SL.py  ema-rsi-vol.py
