
[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Algorithmic Trading Bot"
authors = ["Zulferich <zulferich55@gmail.com>"]
readme = "README.md"
packages = [{include = "trading_bot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
ccxt = "^4.4.78"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
